first commit adding ascii map