@@ -61,5 +61,6 @@ task benchmarkJar(type: ShadowJar) {
 }
 
 test {
+    jvmArgs('--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED')
     useJUnitPlatform()
 }
